# music-sync

./: .gitignore  ADR.md  AGENTS.md  DESIGN.md  README.md  SPEC.md  index.html  package.json  pnpm-lock.yaml  spec-music-sync-app.md  vite.config.ts  vitest.config.ts
.github/workflows/: build.yml  release.yml
src/: index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/crates/comparator/: Cargo.toml
src-tauri/crates/comparator/src/: lib.rs
src-tauri/crates/copy_engine/: Cargo.toml
src-tauri/crates/copy_engine/src/: lib.rs
src-tauri/crates/domain/: Cargo.toml
src-tauri/crates/domain/src/: lib.rs  mount.rs
src-tauri/crates/history/: Cargo.toml
src-tauri/crates/history/src/: lib.rs
src-tauri/crates/scanner/: Cargo.toml
src-tauri/crates/scanner/src/: lib.rs  main.rs
src-tauri/icons/: icon.icns
src-tauri/migrations/: 001_initial.sql  001_sync_tables.sql
src-tauri/src/: lib.rs
src-tauri/src/commands/: compare.rs  copy.rs  history.rs  mod.rs  space.rs
src/app/: App.tsx  main.tsx
src/entities/music-file/: index.ts
src/entities/sync-profile/: index.ts
src/features/comparison-view/: ComparisonView.test.tsx  ComparisonView.tsx  index.ts
src/features/copy-plan/: CopyPlanView.test.tsx  CopyPlanView.tsx  index.ts
src/features/copy-progress/: CopyProgressView.test.tsx  CopyProgressView.tsx  index.ts
src/features/folder-selection/: FolderSelection.test.tsx  FolderSelection.tsx  index.ts
src/features/history-view/: HistoryView.test.tsx  HistoryView.tsx  index.ts
src/pages/home/: HomePage.tsx
src/shared/: format-size.ts
src/shared/api/: index.ts
src/shared/store/: useAppStore.test.ts  useAppStore.ts
