[workspace]
resolver = "2"
members = [
    ".",
    "crates/domain",
    "crates/scanner",
    "crates/comparator",
    "crates/copy_engine",
    "crates/history",
]

[workspace.package]
version = "0.1.0"
edition = "2021"

[package]
name = "music-sync"
version.workspace = true
edition.workspace = true

[lib]
name = "music_sync_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["sync"] }
fs2 = "0.4"
music-sync-domain = { path = "crates/domain" }
music-sync-scanner = { path = "crates/scanner" }
music-sync-comparator = { path = "crates/comparator" }
music-sync-copy-engine = { path = "crates/copy_engine" }
music-sync-history = { path = "crates/history" }

[dev-dependencies]
tempfile = "3"
