[package]
name = "music-sync-copy-engine"
version.workspace = true
edition.workspace = true

[dependencies]
music-sync-domain = { path = "../domain" }
tokio = { version = "1", features = ["fs", "io-util", "sync"] }
serde = { version = "1", features = ["derive"] }

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
serde_json = "1"
