[package]
name = "music-sync-scanner"
version.workspace = true
edition.workspace = true

[dependencies]
music-sync-domain = { path = "../domain" }
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["fs", "sync", "macros", "rt-multi-thread"] }

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

[[bin]]
name = "scanner-cli"
path = "src/main.rs"
